<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/gray_normal"
        android:layout_below="@+id/textView7"
        android:textColorHint="@color/grayfont"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/learylout"
        android:drawableLeft="@drawable/login_phone"
        android:drawablePadding="5dp"
        android:hint="@string/username"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:singleLine="true"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/login_pwd"
        android:layout_width="match_parent"
        android:textColorHint="@color/grayfont"
        android:layout_height="50dp"
        android:textColor="@color/gray_normal"
        android:layout_below="@+id/login_username"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:drawablePadding="5dp"
        android:background="@drawable/learylout"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ_"
        android:drawableLeft="@drawable/login_lock"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="12"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:singleLine="true"
        android:textSize="20sp" />


    <ImageView
        android:id="@+id/login_pin_ai_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/logo"
        android:contentDescription="@string/pin_ai_logo" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_pin_ai_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="聘爱"
        android:textColor="@color/background_pink"
        android:textSize="28sp" />

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/login_pwd"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_btn_eidt"
        android:padding="5dp"
        android:text="@string/login"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColor="@android:color/white"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/login_to_regist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/login_btn_login"
        android:layout_alignRight="@+id/login_btn_login"
        android:layout_below="@+id/login_btn_login"
        android:layout_marginTop="10dp"
        android:text="注册帐号"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@drawable/bg_text_regist" />

    <TextView
        android:id="@+id/login_to_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/login_btn_login"
        android:layout_alignRight="@+id/login_btn_login"
        android:layout_below="@+id/login_to_regist"
        android:layout_marginTop="5dp"
        android:text="忘记密码"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@drawable/bg_text_regist" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="阅读聘爱服务条款"
        android:clickable="true"
        android:onClick="goToService"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@drawable/bg_text_clause"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>