<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical">

        <RadioGroup
            android:id="@+id/sex"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/bg_radio_button_boy"
                android:button="@null"
                android:gravity="center"
                android:textColor="@color/btn_blue_normal" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginLeft="50dp"
                android:background="@drawable/bg_radio_button_girl"
                android:button="@null"
                android:gravity="center"
                android:textColor="@color/background_pink" />
        </RadioGroup>
    </LinearLayout>


    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignEnd="@+id/forgot_content"
        android:layout_alignLeft="@+id/forgot_content"
        android:layout_alignRight="@+id/forgot_content"
        android:layout_alignStart="@+id/forgot_content"
        android:layout_below="@+id/forgot_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_btn_eidt"
        android:padding="5dp"
        android:text="@string/que_ren"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/forgot_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout3"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/forgot_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/learylout"
            android:gravity="center_vertical"
            android:hint="@string/username"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/gray_normal"
            android:textColorHint="@color/grayfont"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/forgot_old_pwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/learylout"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ_"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="12"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/gray_normal"
            android:textColorHint="@color/grayfont"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/forgot_confirm_pwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/learylout"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ_ "
            android:hint="@string/query_que_ren"
            android:inputType="textPassword"
            android:maxLength="12"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/gray_normal"
            android:textColorHint="@color/grayfont"
            android:textSize="20sp" />
    </LinearLayout>
    <TextView
        android:id="@+id/regist_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:layout_below="@+id/service_layout"
        android:text="登录"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@drawable/bg_text_regist" />


    <LinearLayout
        android:id="@+id/service_layout"
        android:layout_width="match_parent"
        android:layout_below="@+id/button2"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:layout_alignEnd="@+id/button2">

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_checked"
            android:button="@null"
            android:checked="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="已同意并阅读 " />

        <TextView
            android:id="@+id/serviceitems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_normal" />
    </LinearLayout>
</RelativeLayout>